--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.2.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.2",
     "draft-js": "^0.11.7",
@@ -49,4 +50,3 @@
   },
   "proxy": "http://localhost:5000/api/"
 }
- 
